# python-data-analytics-udemy-business

./: LICENSE  README.md  pyproject.toml
src/: 10_Classification_models.ipynb  10_Classification_models_exercise.ipynb  1_Numpy_blank.ipynb  1_Numpy_exercise.ipynb  2_DataFrame.ipynb  2_DataFrame_blank.ipynb  2_DataFrame_exercise.ipynb  3_DataFrame.ipynb  3_DataFrame_blank.ipynb  3_DataFrame_exercise.ipynb  4_Categolical_plot.ipynb  4_Categolical_plot_blank.ipynb  4_Categorical_plot_exercise.ipynb  5_Dist_Rel_plot.ipynb  5_Dist_Rel_plot_exercise.ipynb  6_Matrix_plot_And_Settings.ipynb  6_Matrix_plot_And_Settings_exercise.ipynb  7_Categorical_features.ipynb  7_Categorical_features_blank.ipynb  7_Categorical_features_exercise.ipynb  8_Numeric_features.ipynb  8_Numeric_features_exercise.ipynb  9_Regression_models.ipynb  9_Regression_models_exercise.ipynb  answered_10_Classification_models_exercise.ipynb  answered_3_DataFrame_exercise.ipynb  answered_4_Categorical_plot_exercise.ipynb  answered_5_Dist_Rel_plot_exercise.ipynb  df_exercise.csv  sample1.pkl  sample1_with_index.csv  sample1_without_index.csv  titanic_non_null.csv
