[project]
name = "python-data-analytics-udemy-business"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "sato1214syun", email = "sato1214syun@gmail.com" }
]
dependencies = ["numpy~=1.24.3", "pandas~=2.0.1", "seaborn~=0.12.2", "scikit-learn~=1.2.2", "matplotlib~=3.7.1", "notebook~=6.5.4"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
